--- a/index.html
+++ b/index.html
@@ -1,24 +1,38 @@
-<html>
+  <!DOCTYPE html>
+<html lang="en">
+
   <head>
-    <style>
-      body, html {
-  height: 100%;
-}
 
-.bg {
-  /* The image used */
-  background-image: url("maintenance-2422172_1920.jpg");
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="TemplateMo">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-  /* Full height */
-  height: 100%;
+    <title>GPC Bathinda</title>
 
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-    </style>
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
+    <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/lightbox.css">
+<!--
+
+TemplateMo 569 Edu Meeting
+
+https://templatemo.com/tm-569-edu-meeting
+
+-->
   </head>
-  <body>
-  </body>
+
+<body>
+Site Under Construction...........
+  
+</body>
+
+</body>
 </html>
