Menu Working for Mobile Devices

--- a/index.html
+++ b/index.html
@@ -44,8 +44,66 @@ https://templatemo.com/tm-569-edu-meeting
   <header class="header-area header-sticky">
       <div class="container">
           <div class="row">
-            <div class="col-12" id="nav-placeholder">
-              <!--menu will be loaded here-->
+            <div class="col-12">
+              <nav class="main-nav">
+                <a href="index.html" class="logo"><span id="subcolor">GPC</span>Bathinda</a>
+                <ul class="nav">
+                  <li class="scroll-to-section"><a href="index.html" class="active">Home</a></li>
+                  <li class="has-sub">
+                    <a href="javascript:void(0)">About Us</a>
+                    <ul class="sub-menu">
+                      <li><a href="organization.html">Organization</a></li>
+                      <li><a href="principal_message.html">Principal\'s Message</a></li>
+                      <li><a href="vision_mission.html">Vision & Mission</a></li>
+                      <li><a href="history.html">History</a></li>
+                      <li><a href="campus.html">Campus</a></li>
+                    </ul>
+                  </li>
+                  <li class="has-sub">
+                    <a href="javascript:void(0)">Academics & Admission</a>
+                    <ul class="sub-menu">
+                      <li><a href="organization.html">Organization</a></li>
+                      <li><a href="principal_message.html">Principal\'s Message</a></li>
+                      <li><a href="vision_mission.html">Vision & Mission</a></li>
+                      <li><a href="history.html">History</a></li>
+                      <li><a href="campus.html">Campus</a></li>
+                    </ul>
+                  </li>
+                  <li class="has-sub">
+                    <a href="javascript:void(0)">Departments</a>
+                    <ul style="width:320px" class="sub-menu">
+                      <li><a href="aa.html">Architectural Assistantship</a></li>
+                      <li><a href="ce.html">Civil Engineering</a></li>
+                      <li><a href="cse.html">Computer Science &amp; Engineering</a></li>
+                      <li><a href="ee.html">Electrical Engineering</a></li>
+                      <li><a href="ece.html">Electronics & Communications Engg</a></li>
+                      <li><a href="it.html">Information Technology</a></li>
+                      <li><a href="me.html">Mechanical Engineering</a></li>
+                      <li><a href="pie.html">Production and Industrial Engineering</a></li>
+                      <li><a href="pharmacy.html">Pharmacy</a></li>
+                      <li><a href="apsc.html">Applied Sciences</a></li>
+                      <li><a href="workshop.html">Workshop</a></li>
+                    </ul>
+                  </li>
+                  <li class="has-sub">
+                    <a href="javascript:void(0)">Affiliations</a>
+                    <ul class="sub-menu">
+                      <li><a href="meetings.html">AICTE Approvals</a></li>
+                      <li><a href="meeting-details.html">Meeting Details</a></li>
+                      </ul>
+                      </li>
+                      <li class="has-sub"> 
+                        <a href="javascript:void(0)">Infrastructure</a>
+                        <ul class="sub-menu">
+                          <li><a href="meetings.html">Upcoming Meetings</a></li>
+                          <li><a href="meeting-details.html">Meeting Details</a></li>
+                          </ul>
+                          </li>
+                          </ul>
+                          <a class="menu-trigger">
+                            <span>Menu</span>
+                          </a>
+                        </nav>
           </div>
           </div>
       </div>
