--- a/index.html
+++ b/index.html
@@ -29,13 +29,38 @@ https://templatemo.com/tm-569-edu-meeting
 -->
   </head>
 
-<body onload="menus();">
+<body>
 
   <!-- Sub Header -->
   <div class="sub-header">
     <div class="container">
-      <div class="row" id="top-menu-placeholder">
-        
+      <div class="row">
+        <div class="col-lg-8 col-sm-8">
+          <div class="left-content">
+            <p>
+              <span style="padding-left:5%;">
+                <i class="fa fa-briefcase">&nbsp;</i>
+                <a href="placements.html">Placements</a>
+              </span>
+              <span style="padding-left:2%;">
+                <i class="fa fa-briefcase">&nbsp;</i>
+                <a href="citizen_charter.html">Citizen Charter &amp; RTI</a>
+              </span>
+              <span style="padding-left:2%;">
+                <i class="fa fa-download">&nbsp;</i>
+                <a href="downloads.html">Downloads</a>
+              </span>
+              </p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-3">
+          <div class="right-icons">
+            <ul>
+              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="mailto:gpcbathinda@punjab.gov.in"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -46,11 +71,11 @@ https://templatemo.com/tm-569-edu-meeting
           <div class="row">
             <div class="col-12">
               <nav class="main-nav">
-                <a href="index.html" class="logo"><span id="subcolor">GPC</span>Bathinda</a>
+                <a href="index.html" class="logo">GPC Bathinda</a>
                 <ul class="nav">
                   <li class="scroll-to-section"><a href="index.html" class="active">Home</a></li>
                   <li class="has-sub">
-                    <a href="javascript:void(0)">AboutUs</a>
+                    <a href="javascript:void(0)">About Us</a>
                     <ul class="sub-menu">
                       <li><a href="organization.html">Organization</a></li>
                       <li><a href="principal_message.html">Principal&apos;s Message</a></li>
@@ -64,9 +89,11 @@ https://templatemo.com/tm-569-edu-meeting
                     <ul style="width:280px" class="sub-menu">
                       <li><a href="programmes.html">Programmes of Study</a></li>
                       <li><a href="admission_eligibility.html">Admission Eligibility</a></li>
+                      <li><a href="fee_structure.html">Anti Ragging</a></li>
                       <li><a href="fee_structure.html">Fee Structure</a></li>
                       <li><a href="academic_calendar.html">Academic Calendar</a></li>
                       <li><a href="general_rules.html">General Rules and Guidelines</a></li>
+                      <li><a href="psbte_merit.html">PSBTE Results</a></li>
                       <li><a href="psbte_merit.html">PSBTE Merit Positions</a></li>
                     </ul>
                   </li>
@@ -86,22 +113,28 @@ https://templatemo.com/tm-569-edu-meeting
                       <li><a href="workshop.html">Workshop</a></li>
                     </ul>
                   </li>
+                  <li class="has-sub"> 
+                    <a href="javascript:void(0)">Facilities</a>
+                    <ul class="sub-menu">
+                      <li><a href="meeting-details.html">SRC Clubs</a></li>
+                      <li><a href="meeting-details.html">Library</a></li>
+                      <li><a href="meeting-details.html">Hostel</a></li>
+                      <li><a href="meeting-details.html">Sports &amp; NSS</a></li>
+                      <li><a href="meeting-details.html">Canteen</a></li>
+                      <li><a href="meeting-details.html">Workshops</a></li>
+                      <li><a href="meeting-details.html">Alumni</a></li>
+
+                      </ul>
+                      </li>
+                  
                   <li class="has-sub">
                     <a href="javascript:void(0)">Affiliations</a>
                     <ul class="sub-menu">
-                      <li><a href="aicte.html">AICTE Approvals</a></li>
-                      <li><a href="pci.html">PCI Approvals</a></li>
-                      <li><a href="coa.html">COA Approvals</a></li>
-                      <li><a href="meeting-details.html">Meeting Details</a></li>
+                      <li><a href="aicte.html">AICTE</a></li>
+                      <li><a href="pci.html">PCI</a></li>
+                      <li><a href="coa.html">COA</a></li>
                       </ul>
                       </li>
-                      <li class="has-sub"> 
-                        <a href="javascript:void(0)">Infrastructure</a>
-                        <ul class="sub-menu">
-                          <li><a href="meetings.html">Upcoming Meetings</a></li>
-                          <li><a href="meeting-details.html">Meeting Details</a></li>
-                          </ul>
-                          </li>
                           </ul>
                           <a class="menu-trigger">
                             <span>Menu</span>
@@ -765,8 +798,8 @@ https://templatemo.com/tm-569-edu-meeting
       </div>
     </div>
     <div class="footer">
-      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved. 
-          <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
+      <p>Copyright © 2022 Government Polytechnic College, Bathinda. 
+          <br>Design: &amp; Developed by CSE &amp; IT Department.</p>
     </div>
   </section>
 
