Working on Color Scheme Front Page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/lightbox.css">
     <link rel="stylesheet" href="assets/css/simple-slideshow-styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Signika:wght@500&display=swap" rel="stylesheet"> 
 <!--
 
 TemplateMo 569 Edu Meeting
@@ -49,6 +52,10 @@ https://templatemo.com/tm-569-edu-meeting
               </span>
               <span style="padding-left:2%;">
                 <i class="fa fa-download">&nbsp;</i>
+                <a href="downloads.html">Disclosure</a>
+              </span>
+              <span style="padding-left:2%;">
+                <i class="fa fa-download">&nbsp;</i>
                 <a href="downloads.html">Downloads</a>
               </span>
               </p>
@@ -72,7 +79,10 @@ https://templatemo.com/tm-569-edu-meeting
           <div class="row">
             <div class="col-12">
               <nav class="main-nav">
-                <a href="index.html" class="logo">GPC Bathinda</a>
+                <a href="index.html">
+                  <img style="width: 8%;height:82px;padding: 7px;border-radius: 50%;" src="assets/images/logo.jpeg" alt="">
+                  
+                </a>
                 <ul class="nav">
                   <li class="scroll-to-section"><a href="index.html" class="active">Home</a></li>
                   <li class="has-sub">
