--- a/apsc.html
+++ b/apsc.html
@@ -29,71 +29,91 @@ https://templatemo.com/tm-569-edu-meeting
 -->
   </head>
 
-<body>
+  <body>
 
-   
-
-  <!-- Sub Header -->
-  <!-- <div class="sub-header">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-sm-8">
-          <div class="left-content">
-            <p>This is an educational <em>HTML CSS</em> template by TemplateMo website.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-4">
-          <div class="right-icons">
-            <ul>
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <!-- ***** Header Area Start ***** -->
-  <header class="header-area header-sticky">
-      <div class="container">
-          <div class="row">
+    <!-- ***** Header Area Start ***** -->
+    <header class="header-area header-sticky">
+        <div class="container">
+            <div class="row">
               <div class="col-12">
-                  <nav class="main-nav">
-                      <!-- ***** Logo Start ***** -->
-                      <a href="index.html" class="logo">
-                          Edu Meeting
-                      </a>
-                      <!-- ***** Logo End ***** -->
-                      <!-- ***** Menu Start ***** -->
-                      <ul class="nav">
-                          <li><a href="index.html">Home</a></li>
-                          <li><a href="meetings.html" class="active">Meetings</a></li>
-                          <li><a href="index.html">Apply Now</a></li>
-                          <li class="has-sub">
-                              <a href="javascript:void(0)">Pages</a>
-                              <ul class="sub-menu">
-                                  <li><a href="meetings.html">Upcoming Meetings</a></li>
-                                  <li><a href="meeting-details.html">Meeting Details</a></li>
-                              </ul>
-                          </li>
-                          <li><a href="index.html">Courses</a></li> 
-                          <li><a href="index.html">Contact Us</a></li> 
-                      </ul>        
-                      <a class='menu-trigger'>
-                          <span>Menu</span>
-                      </a>
-                      <!-- ***** Menu End ***** -->
-                  </nav>
-              </div>
-          </div>
-      </div>
-  </header>
-  <!-- ***** Header Area End ***** -->
+                <nav class="main-nav">
+                  <a href="index.html">
+                    <img style="width: 8%;height:82px;padding: 7px;border-radius: 50%;" src="assets/images/logo.jpeg" alt="">
+                    
+                  </a>
+                  <ul class="nav">
+                    <li class="scroll-to-section"><a href="index.html" class="active">Home</a></li>
+                    <li class="has-sub">
+                      <a href="javascript:void(0)">About Us</a>
+                      <ul class="sub-menu">
+                        <li><a href="organization.html">Organization</a></li>
+                        <li><a href="principal_message.html">Principal&apos;s Message</a></li>
+                        <li><a href="vision_mission.html">Vision & Mission</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="campus.html">Campus</a></li>
+                      </ul>
+                    </li>
+                    <li class="has-sub">
+                      <a href="javascript:void(0)">Academics & Admission</a>
+                      <ul style="width:280px" class="sub-menu">
+                        <li><a href="programmes.html">Programmes of Study</a></li>
+                        <li><a href="admission_eligibility.html">Admission Eligibility</a></li>
+                        <li><a href="anti_ragging.html">Anti Ragging</a></li>
+                        <li><a href="fee_structure.html">Fee Structure</a></li>
+                        <li><a href="academic_calendar.html">Academic Calendar</a></li>
+                        <li><a href="general_rules.html">General Rules and Guidelines</a></li>
+                        <li><a href="psbte_results.html">PSBTE Results</a></li>
+                        <li><a href="psbte_merit.html">PSBTE Merit Positions</a></li>
+                      </ul>
+                    </li>
+                    <li class="has-sub">
+                      <a href="javascript:void(0)">Departments</a>
+                      <ul style="width:320px" class="sub-menu">
+                        <li><a href="aa.html">Architectural Assistantship</a></li>
+                        <li><a href="ce.html">Civil Engineering</a></li>
+                        <li><a href="cse.html">Computer Science &amp; Engineering</a></li>
+                        <li><a href="ee.html">Electrical Engineering</a></li>
+                        <li><a href="ece.html">Electronics & Communications Engg</a></li>
+                        <li><a href="it.html">Information Technology</a></li>
+                        <li><a href="me.html">Mechanical Engineering</a></li>
+                        <li><a href="pie.html">Production and Industrial Engineering</a></li>
+                        <li><a href="pharmacy.html">Pharmacy</a></li>
+                        <li><a href="apsc.html">Applied Sciences</a></li>
+                        <li><a href="workshop.html">Workshop</a></li>
+                      </ul>
+                    </li>
+                    <li class="has-sub"> 
+                      <a href="javascript:void(0)">Facilities</a>
+                      <ul class="sub-menu">
+                        <li><a href="src.html">SRC Clubs</a></li>
+                        <li><a href="library.html">Library</a></li>
+                        <li><a href="hostels.html">Hostel</a></li>
+                        <li><a href="sports.html">Sports &amp; NSS</a></li>
+                        <li><a href="canteen.html">Canteen</a></li>
+                        <li><a href="workshop.html">Workshops</a></li>
+                        <li><a href="alumni.html">Alumni</a></li>
+  
+                        </ul>
+                        </li>
+                    
+                    <li class="has-sub">
+                      <a href="javascript:void(0)">Affiliations</a>
+                      <ul class="sub-menu">
+                        <li><a href="aicte_eoa.html">AICTE</a></li>
+                        <li><a href="pci.html">PCI</a></li>
+                        <li><a href="coa.html">COA</a></li>
+                        </ul>
+                        </li>
+                            </ul>
+                            <a class="menu-trigger">
+                              <span>Menu</span>
+                            </a>
+                          </nav>
+            </div>
+            </div>
+        </div>
+    </header>
 
-  <!-- <section class="heading-page header-text" id="top">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
