--- a/app_labs.html
+++ b/app_labs.html
@@ -129,7 +129,7 @@
                         <tr>
                           <th scope="row">1</th>
                           <td>Physics Lab-1</td>
-                          <td>Ms.Namita Bansal</td>
+                          <td>Dr.Namita Bansal</td>
                           
                         </tr>
                         <tr>
