Working on Styling

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="col-12">
               <nav class="main-nav">
                 <a href="index.html">
-                  <img style="width: 8%;height:82px;padding: 7px;border-radius: 50%;" src="assets/images/logo.jpeg" alt="">
-                  
+                  <img src="assets/images/logo.jpeg" class="logo" alt="">
+                  <img src="assets/images/text.png" class="text-logo" alt="">
                 </a>
                 <ul class="nav">
                   <li><a href="index.html" >Home</a></li>
