working on styles

--- a/index.html
+++ b/index.html
@@ -176,10 +176,11 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="col-lg-12">
                 <div class="caption">
               <h2>Government Polytechnic College, Bathinda</h2>
-              <p>
+              <p style="line-height: 2.4rem;font-size: 16px;margin-top: 30px;text-align: justify;">
                 Government Polytechnic College Bathinda was established in the year 1985 to impart quality education in the field of Engineering and Technology,with an aim to cater to the students of the southern Punjab.
                  This College is situated on Bibiwala road approx 3kms from Bathinda bus stand and approx 4.2kms from Bathinda railway station junction.
-                It has been established on a lush green campus of 22 acres
+                It has been established on a lush green campus of 22 acres.<br/>
+                With Over 350 sanctioned seats in various programmes, the college is well known for its academic excellence and its outstanding placement record. The college is also well known for its excellent infrastructure and diverse scholarship opportunities to provide financial aid to the students from all backgrounds.
               </p>
               
 
