working on styling

--- a/civil_contact.html
+++ b/civil_contact.html
@@ -165,7 +165,7 @@
               </li>
               <li>
                 <h6>Email Address</h6>
-                <span>csegpcdeptt@gmail.com</span>
+                <span>civilgpcdeptt@gmail.com</span>
               </li>
              
             </ul>
