--- a/ee.html
+++ b/ee.html
@@ -118,7 +118,7 @@
                 <div class="down-content">
                   <a href="ee.html"><h4>Electrical Enginreering Department</h4></a>
                   <p style="text-align: justify;">
-                    The Electrical Engineering technocrats are required in almost every engineering organisation. The Electrical Engineering technocrats play an important role in electrical wiring, motor winding, generation, transmission and distribution of electrical power. Now a days there is huge demand of electrical engineers in the companies which are involved in infrastructure development. Our college is offering this course since its inception.
+                    The Electrical Engineering technocrats are required in almost every engineering organisation. The Electrical Engineering technocrats play an important role in electrical wiring, motor winding, generation, transmission and distribution of electrical power. Now a days there is huge demand of electrical engineers in the companies which are involved in infrastructure development.
                   </p>
                   <!-- <br/>
                   <h5>Competency Profile</h5>
