--- a/ee_contact.html
+++ b/ee_contact.html
@@ -106,17 +106,7 @@
             </div>
             </div>
         </div>
-    </header> <body onload="menus();">
-
-    <header class="header-area header-sticky">
-      <div class="container">
-          <div class="row">
-            <div class="col-12" id="nav-placeholder">
-              <!--menu will be loaded here-->
-          </div>
-          </div>
-      </div>
-  </header>
+    </header> 
 
  
   <section class="contact-us" id="contact">
@@ -176,7 +166,7 @@
               </li>
               <li>
                 <h6>Email Address</h6>
-                <span>csegpcdeptt@gmail.com</span>
+                <span>eegpcdeptt@gmail.com</span>
               </li>
              
             </ul>
