--- a/aa_contact.html
+++ b/aa_contact.html
@@ -166,7 +166,7 @@
               </li>
               <li>
                 <h6>Email Address</h6>
-                <span>csegpcdeptt@gmail.com</span>
+                <span>archdeptt@gmail.com</span>
               </li>
              
             </ul>
