--- a/it.html
+++ b/it.html
@@ -118,7 +118,7 @@
                 <div class="down-content">
                   <a href="it.html"><h4>Information Technology Department</h4></a>
                   <p style="text-align: justify;">
-                    Information Technology is a very demanding course in present times, as all the work of the present generation is dependent on computers. Computer Science Engg department has various software & hardware labs with adequate infrastructure with wi-fi connectivity.
+                    Information Technology is a very demanding course in present times, as all the work of the present generation is dependent on computers.Information Technology department has various software & hardware labs with adequate infrastructure with wi-fi connectivity.
 
                   </p>
                   <br/>
