--- a/pie_faculty.html
+++ b/pie_faculty.html
@@ -173,7 +173,7 @@
                            </div>
                            <div class="content">
                                <div class="main">
-                                   <h3 class="name">Er.Rupinder Singh Chahal</h3>
+                                   <h3 class="name">Dr.Rupinder Singh Chahal</h3>
                                    <p class="profession">Lecturer</p>
                               </div>
                               
