--- a/pie_labs.html
+++ b/pie_labs.html
@@ -129,7 +129,7 @@
                       <tbody>
                         <tr>
                           <th scope="row">1</th>
-                          <td>Inspection & Quality Control Lab</td>
+                          <td>Pharmaceutical Chemistry Lab</td>
                           <td>Er.Gurinder Singh Mangat</td>
                           
                         </tr>
