--- a/index.html
+++ b/index.html
@@ -504,8 +504,8 @@ https://templatemo.com/tm-569-edu-meeting
         <div class="col-lg-12">
           <div class="section-heading">
             <h2 style=" text-align: center;">
-              Testimonial<br/>
-              <span style="color:#9c2c34;font-size: 16px;font-style: italic;">Our Students Saying...</span>
+              Our Courses<br/>
+              <!--<span style="color:#9c2c34;font-size: 16px;font-style: italic;">Our Students Saying...</span>-->
               
             </h2>
             
