added data antiragging fee structure

--- a/disclosure.html
+++ b/disclosure.html
@@ -698,7 +698,7 @@
                         <tr>
                           <th scope="row"></th>
                           <td>Academic Calender </td>
-                          <td><a href="#">Click Here</a></td>
+                          <td><a href=""assets/files/academic_calender.pdf"">Click Here</a></td>
                         </tr>
                         <tr>
                           <th scope="row"></th>
@@ -728,22 +728,22 @@
                         <tr>
                           <th scope="row">10.19</th>
                           <td>Infrastructural Information </td>
-                          <td><a href="assets/infra.pdf">Click Here</a></td>
+                          <td><a href="assets/files/infra.pdf">Click Here</a></td>
                         </tr>
                         <tr>
                           <th scope="row"></th>
                           <td>Classrooms </td>
-                          <td><a href="assets/infra.pdf">Click Here</a></td>
+                          <td><a href="assets/files/infra.pdf">Click Here</a></td>
                         </tr>
                         <tr>
                           <th scope="row"></th>
                           <td>Laboratory Details </td>
-                          <td><a href="assets/infra.pdf">Click Here</a></td>
+                          <td><a href="assets/files/infra.pdf">Click Here</a></td>
                         </tr>
                         <tr>
                           <th scope="row"></th>
                           <td>Computer Centre Facilities </td>
-                          <td><a href="assets/infra.pdf">Click Here</a></td>
+                          <td><a href="assets/files/infra.pdf">Click Here</a></td>
                         </tr>
                         <tr>
                           <th scope="row"></th>
@@ -753,32 +753,32 @@
                         <tr>
                           <th scope="row"></th>
                           <td>Auditorium/Seminar hall </td>
-                          <td><a href="assets/infra.pdf">Click Here</a></td>
+                          <td><a href="assets/files/infra.pdf">Click Here</a></td>
                         </tr>
                         <tr>
                           <th scope="row"></th>
                           <td>Cafeteria </td>
-                          <td><a href="assets/infra.pdf">Click Here</a></td>
+                          <td><a href="assets/files/infra.pdf">Click Here</a></td>
                         </tr>
                         <tr>
                           <th scope="row"></th>
                           <td>Indoor Sports Facilities </td>
-                          <td><a href="assets/infra.pdf">Click Here</a></td>
+                          <td><a href="assets/files/infra.pdf">Click Here</a></td>
                         </tr>
                         <tr>
                           <th scope="row"></th>
                           <td>Outdoor Sports Facilities </td>
-                          <td><a href="assets/infra.pdf">Click Here</a></td>
+                          <td><a href="assets/files/infra.pdf">Click Here</a></td>
                         </tr>
                         <tr>
                           <th scope="row"></th>
                           <td>Gymnasium Facilities </td>
-                          <td><a href="assets/infra.pdf">Click Here</a></td>
+                          <td><a href="assets/files/infra.pdf">Click Here</a></td>
                         </tr>
                         <tr>
                           <th scope="row"></th>
                           <td>Any Other Facilities </td>
-                          <td><a href="assets/infra.pdf">Click Here</a></td>
+                          <td><a href="assets/files/infra.pdf">Click Here</a></td>
                         </tr>
                         <tr>
                           <th scope="row">10.20</th>
