working on style

--- a/tempfile.html
+++ b/tempfile.html
@@ -76,3 +76,177 @@
     </div>
   </article>
 </div>
+
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="section-heading">
+        <h2 style=" text-align: center;">
+          Our Courses<br/>
+          <!--<span style="color:#9c2c34;font-size: 16px;font-style: italic;">Our Students Saying...</span>-->
+          
+        </h2>
+        
+      </div>
+    </div>
+    <div class="col-lg-12">
+      <div class="owl-courses-item owl-carousel">
+        <div class="item" >
+          <img src="assets/images/cse.jpg" alt="Course One" style="height: 200px;">
+          <div class="down-content" style="height: 150px;">
+            <h4>Computer Science & Engg</h4>
+            <div class="info">
+              <div class="row">
+                <div class="col-8">
+                  <ul>
+                    <span>Duration:3 Years</span>
+                </div>
+                <div class="col-4">
+                   <span>Intake:60</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="assets/images/ee.jpg" alt="Course One"style="height: 200px;">
+          <div class="down-content" style="height: 150px;">
+            <h4>Electrical Engg</h4>
+            <div class="info">
+              <div class="row">
+                <div class="col-8">
+                  <ul>
+                    <span>Duration:3 Years</span>
+                </div>
+                <div class="col-4">
+                   <span>Intake:60</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="assets/images/me.jpg" alt="Course One"style="height: 200px;">
+          <div class="down-content" style="height: 150px;">
+            <h4>Mechanical Engg</h4>
+            <div class="info">
+              <div class="row">
+                <div class="col-8">
+                  <ul>
+                    <span>Duration:3 Years</span>
+                </div>
+                <div class="col-4">
+                   <span>Intake:60</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="assets/images/ce.jpg" alt="Course One"style="height: 200px;">
+          <div class="down-content" style="height: 150px;">
+            <h4>Civil Engg</h4>
+            <div class="info">
+              <div class="row">
+                <div class="col-8">
+                  <ul>
+                    <span>Duration:3 Years</span>
+                </div>
+                <div class="col-4">
+                   <span>Intake:60</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="assets/images/ece.jpg" alt="Course One"style="height: 200px;">
+          <div class="down-content" style="height: 150px;">
+            <h4>ECE</h4>
+            <div class="info">
+              <div class="row">
+                <div class="col-8">
+                  <ul>
+                    <span>Duration:3 Years</span>
+                </div>
+                <div class="col-4">
+                   <span>Intake:30</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="assets/images/it.jpg" alt="Course One"style="height: 200px;">
+          <div class="down-content" style="height: 150px;">
+            <h4>Information Technology</h4>
+            <div class="info">
+              <div class="row">
+                <div class="col-8">
+                  <ul>
+                    <span>Duration:3 Years</span>
+                </div>
+                <div class="col-4">
+                   <span>Intake:30</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="assets/images/aa.jpeg" alt="Course One"style="height: 200px;">
+          <div class="down-content" style="height: 150px;">
+            <h4>Architectural Assistantship</h4>
+            <div class="info">
+              <div class="row">
+                <div class="col-8">
+                  <ul>
+                    <span>Duration:3 Years</span>
+                </div>
+                <div class="col-4">
+                   <span>Intake:30</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="assets/images/pie.jpg" alt="Course One"style="height: 200px;">
+          <div class="down-content" style="height: 150px;">
+            <h4>Production & Indl Engg</h4>
+            <div class="info">
+              <div class="row">
+                <div class="col-8">
+                  <ul>
+                    <span>Duration:3 Years</span>
+                </div>
+                <div class="col-4">
+                   <span>Intake:30</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="assets/images/pharmacy.jpg" alt="Course One"style="height: 200px;">
+          <div class="down-content" style="height: 150px;">
+            <h4>Pharmacy</h4>
+            <div class="info">
+              <div class="row">
+                <div class="col-8">
+                  <ul>
+                    <span>Duration:2 Years</span>
+                </div>
+                <div class="col-4">
+                   <span>Intake:30</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
